<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rbezliudko.thirdhomework.SecondHomeworkActivity">

    <TextView
        android:text="@string/text_view_fibonacci"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:textSize="@dimen/text_view_size"/>

    <EditText
        android:id="@+id/edit_text_2_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:text="@string/text_view_factorial"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:textSize="@dimen/text_view_size"/>

    <EditText
        android:id="@+id/edit_text_2_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_count"/>

    <TextView
        android:id="@+id/text_counted"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:textSize="@dimen/text_view_size"/>

    <Button
        android:id="@+id/button_return_second"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_return"/>

</LinearLayout>
